--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-cloud": "4.16.2",
     "@strapi/plugin-i18n": "4.16.2",
     "@strapi/plugin-users-permissions": "4.16.2",
+    "@strapi/provider-upload-aws-s3": "^4.17.1",
     "@strapi/strapi": "4.16.2",
     "better-sqlite3": "8.6.0",
     "react": "^18.0.0",
